force-app/main/default/objects/Account/fields/AtivacaoERP__c.field-meta.xml
<CustomField>
    <fullName>AtivacaoERP__c</fullName>
    <description>Data de ativação do ERP</description>
    <label>Ativação do ERP</label>
    <type>Date</type>
</CustomField>