force-app/main/default/objects/Account/fields/CD__c.field-meta.xml
<CustomField>
    <fullName>CD__c</fullName>
    <label>CD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>