force-app/main/default/objects/Account/fields/CentralCompras__c.field-meta.xml
<CustomField>
    <fullName>CentralCompras__c</fullName>
    <label>Central de Compras | Associação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>