force-app/main/default/objects/Account/fields/ChecklistExecucao__c.field-meta.xml
<CustomField>
    <fullName>ChecklistExecucao__c</fullName>
    <label>Checklist &amp; Execução</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acelerato</fullName>
            </value>
            <value>
                <fullName>Checklist Fácil</fullName>
            </value>
            <value>
                <fullName>Moki</fullName>
            </value>
            <value>
                <fullName>Octopo</fullName>
            </value>
            <value>
                <fullName>Reflexys</fullName>
            </value>
            <value>
                <fullName>Sults Checklist</fullName>
            </value>
            <value>
                <fullName>Tlantic</fullName>
            </value>
            <value>
                <fullName>Yoobic</fullName>
            </value>
            <value>
                <fullName>Checkbits</fullName>
            </value>
            <value>
                <fullName>8Quali</fullName>
            </value>
            <value>
                <fullName>iAuditor</fullName>
            </value>
            <value>
                <fullName>QT9 QMS</fullName>
            </value>
            <value>
                <fullName>Sismetro</fullName>
            </value>
            <value>
                <fullName>Não possui ferramenta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>