force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>CNPJ da empresa. Usado como chave de deduplicacao. Armazenar apenas numeros (14 digitos).</description>
    <externalId>true</externalId>
    <inlineHelpText>Informe os 14 digitos do CNPJ, sem pontos, tracos ou barras.</inlineHelpText>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>