force-app/main/default/objects/Account/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <label>CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CresceVendas</fullName>
            </value>
            <value>
                <fullName>Cresce Vendas</fullName>
            </value>
            <value>
                <fullName>Idever</fullName>
            </value>
            <value>
                <fullName>Izio</fullName>
            </value>
            <value>
                <fullName>Mercafácil</fullName>
            </value>
            <value>
                <fullName>Propz</fullName>
            </value>
            <value>
                <fullName>Regex Solutions</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Vórtice</fullName>
            </value>
            <value>
                <fullName>Zoombox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>