force-app/main/default/objects/Account/fields/Dores__c.field-meta.xml
<CustomField>
    <fullName>Dores__c</fullName>
    <label>Dores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preço Alto (Dólar) do Sistema Atual</fullName>
            </value>
            <value>
                <fullName>Falta de Funcionalidades</fullName>
            </value>
            <value>
                <fullName>Falta de Relatórios</fullName>
            </value>
            <value>
                <fullName>Sistema Integrados (Atendimento e Projetos)</fullName>
            </value>
            <value>
                <fullName>Não possuem sistema</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>