force-app/main/default/objects/Account/fields/Ecommerce__c.field-meta.xml
<CustomField>
    <fullName>Ecommerce__c</fullName>
    <label>Ecommerce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BeHappy</fullName>
            </value>
            <value>
                <fullName>Big2be</fullName>
            </value>
            <value>
                <fullName>Bis2Bis</fullName>
            </value>
            <value>
                <fullName>BizCommerce</fullName>
            </value>
            <value>
                <fullName>Bluesoft</fullName>
            </value>
            <value>
                <fullName>Convertize</fullName>
            </value>
            <value>
                <fullName>Ecshop</fullName>
            </value>
            <value>
                <fullName>ERP RadInfo</fullName>
            </value>
            <value>
                <fullName>F1 Commerce</fullName>
            </value>
            <value>
                <fullName>Instabuy</fullName>
            </value>
            <value>
                <fullName>JN2</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Linx</fullName>
            </value>
            <value>
                <fullName>Loja Integrada</fullName>
            </value>
            <value>
                <fullName>Loji</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>MaxiPós</fullName>
            </value>
            <value>
                <fullName>Mercadapp</fullName>
            </value>
            <value>
                <fullName>Mercafacil</fullName>
            </value>
            <value>
                <fullName>Não possui</fullName>
            </value>
            <value>
                <fullName>Nuvemshop</fullName>
            </value>
            <value>
                <fullName>Olist</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>OSuper</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>PDVnet</fullName>
            </value>
            <value>
                <fullName>Presence</fullName>
            </value>
            <value>
                <fullName>Próprio</fullName>
            </value>
            <value>
                <fullName>Regex Solutions</fullName>
            </value>
            <value>
                <fullName>Saurus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>