force-app/main/default/objects/Account/fields/ERP__c.field-meta.xml
<CustomField>
    <fullName>ERP__c</fullName>
    <description>Sistema ERP utilizado pela empresa</description>
    <label>ERP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3ton (Mabiti Sistemas)</fullName>
            </value>
            <value>
                <fullName>Acedata Software</fullName>
            </value>
            <value>
                <fullName>ADA ERP</fullName>
            </value>
            <value>
                <fullName>Alpha PDV</fullName>
            </value>
            <value>
                <fullName>Alpha7</fullName>
            </value>
            <value>
                <fullName>Altec Sistema</fullName>
            </value>
            <value>
                <fullName>Alterdata</fullName>
            </value>
            <value>
                <fullName>AMC Sistemas</fullName>
            </value>
            <value>
                <fullName>Angulo Sistemas</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Aramo Sistemas</fullName>
            </value>
            <value>
                <fullName>Área Central</fullName>
            </value>
            <value>
                <fullName>Arius</fullName>
            </value>
            <value>
                <fullName>Arpa Sistemas</fullName>
            </value>
            <value>
                <fullName>Artsystem</fullName>
            </value>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>Autcom</fullName>
            </value>
            <value>
                <fullName>Automalog</fullName>
            </value>
            <value>
                <fullName>Avanço</fullName>
            </value>
            <value>
                <fullName>Benner</fullName>
            </value>
            <value>
                <fullName>Bling</fullName>
            </value>
            <value>
                <fullName>Bluesoft</fullName>
            </value>
            <value>
                <fullName>Brascomm</fullName>
            </value>
            <value>
                <fullName>C&amp;S Gestor</fullName>
            </value>
            <value>
                <fullName>Carrossel</fullName>
            </value>
            <value>
                <fullName>Casa Magalhães</fullName>
            </value>
            <value>
                <fullName>CB Sistemas</fullName>
            </value>
            <value>
                <fullName>Cefas</fullName>
            </value>
            <value>
                <fullName>CeltaWare</fullName>
            </value>
            <value>
                <fullName>Cigam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>