force-app/main/default/objects/Account/fields/ERPAnterior__c.field-meta.xml
<CustomField>
    <fullName>ERPAnterior__c</fullName>
    <label>ERP Anterior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bluesoft</fullName>
            </value>
            <value>
                <fullName>Celtaware</fullName>
            </value>
            <value>
                <fullName>Ciss</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>GCF Sistemas</fullName>
            </value>
            <value>
                <fullName>Guia Sistemas</fullName>
            </value>
            <value>
                <fullName>HappyBis</fullName>
            </value>
            <value>
                <fullName>Hipcom</fullName>
            </value>
            <value>
                <fullName>Intersolid</fullName>
            </value>
            <value>
                <fullName>JRS Computação</fullName>
            </value>
            <value>
                <fullName>JSR Sistemas</fullName>
            </value>
            <value>
                <fullName>LBC</fullName>
            </value>
            <value>
                <fullName>Linx</fullName>
            </value>
            <value>
                <fullName>Logus</fullName>
            </value>
            <value>
                <fullName>Mercatus</fullName>
            </value>
            <value>
                <fullName>Odoo</fullName>
            </value>
            <value>
                <fullName>Patrimônio</fullName>
            </value>
            <value>
                <fullName>Pirâmide</fullName>
            </value>
            <value>
                <fullName>Próprio</fullName>
            </value>
            <value>
                <fullName>Rotac</fullName>
            </value>
            <value>
                <fullName>RPInfo</fullName>
            </value>
            <value>
                <fullName>SAP B1</fullName>
            </value>
            <value>
                <fullName>SAP S4HANA/ECC</fullName>
            </value>
            <value>
                <fullName>SGI Sistemas</fullName>
            </value>
            <value>
                <fullName>SisMoura</fullName>
            </value>
            <value>
                <fullName>SuperEZ</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>TOTVS Consinco</fullName>
            </value>
            <value>
                <fullName>TOTVS Protheus</fullName>
            </value>
            <value>
                <fullName>TOTVS RMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>