force-app/main/default/objects/Account/fields/EtiquetasAcelerato__c.field-meta.xml
<CustomField>
    <fullName>EtiquetasAcelerato__c</fullName>
    <label>Etiquetas Acelerato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perdidos ERP Alto Potêncial</fullName>
            </value>
            <value>
                <fullName>Perdidos ERP Baixo Potêncial</fullName>
            </value>
            <value>
                <fullName>Outbound Lista Movidesk</fullName>
            </value>
            <value>
                <fullName>Lead Outbound</fullName>
            </value>
            <value>
                <fullName>Perdidos Acelerato</fullName>
            </value>
            <value>
                <fullName>Não Nutrido</fullName>
            </value>
            <value>
                <fullName>Lead Inbound</fullName>
            </value>
            <value>
                <fullName>Lead Quente</fullName>
            </value>
            <value>
                <fullName>Lead Frio</fullName>
            </value>
            <value>
                <fullName>Lead Morno</fullName>
            </value>
            <value>
                <fullName>Não Qualificado</fullName>
            </value>
            <value>
                <fullName>Cliente da Base</fullName>
            </value>
            <value>
                <fullName>Lead Estratégico</fullName>
            </value>
            <value>
                <fullName>Lead Grandes Contas</fullName>
            </value>
            <value>
                <fullName>Lead Up Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>