force-app/main/default/objects/Account/fields/Eventos__c.field-meta.xml
<CustomField>
    <fullName>Eventos__c</fullName>
    <label>Eventos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRF 2026</fullName>
            </value>
            <value>
                <fullName>Pós NRF ABRAS</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (ACAPS)</fullName>
            </value>
            <value>
                <fullName>Fórum SA+</fullName>
            </value>
            <value>
                <fullName>Smart Market</fullName>
            </value>
            <value>
                <fullName>APAS Show</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação AGAS</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (AMIS)</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (ASSURN)</fullName>
            </value>
            <value>
                <fullName>ACAPS</fullName>
            </value>
            <value>
                <fullName>ABRAS&apos;26</fullName>
            </value>
            <value>
                <fullName>Super Minas</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação (ACESU)</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação APRAS</fullName>
            </value>
            <value>
                <fullName>Jantar Dia dos Supermercados</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação</fullName>
            </value>
            <value>
                <fullName>Neogrid Summit</fullName>
            </value>
            <value>
                <fullName>12º Fórum Nacional 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS 2022</fullName>
            </value>
            <value>
                <fullName>Abras em Ação Estaduais Ceará 2024</fullName>
            </value>
            <value>
                <fullName>Abras em Ação Mato Grosso do Sul 2024</fullName>
            </value>
            <value>
                <fullName>Abras em Ação Paraná 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação Paraíba 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação Pernambuco 2024</fullName>
            </value>
            <value>
                <fullName>ABRAS em Ação Santa Catarina 2024</fullName>
            </value>
            <value>
                <fullName>APAS Experience Bauru 2023</fullName>
            </value>
            <value>
                <fullName>APAS Experience Campinas 2023</fullName>
            </value>
            <value>
                <fullName>APAS Experience Campinas 2024</fullName>
            </value>
            <value>
                <fullName>APAS Experience Guarulhos 2024</fullName>
            </value>
            <value>
                <fullName>APAS Experience Ribeirão 2024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>