force-app/main/default/objects/Account/fields/Finder__c.field-meta.xml
<CustomField>
    <fullName>Finder__c</fullName>
    <label>Finder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sebastião Paxa</fullName>
            </value>
            <value>
                <fullName>Software nas Nuvens</fullName>
            </value>
            <value>
                <fullName>Conexos</fullName>
            </value>
            <value>
                <fullName>Andreia Medina</fullName>
            </value>
            <value>
                <fullName>All Varejo</fullName>
            </value>
            <value>
                <fullName>Claudio Nani (Lota)</fullName>
            </value>
            <value>
                <fullName>Paulo(PC) e Antonio (RN)</fullName>
            </value>
            <value>
                <fullName>Toninho (supertroco)</fullName>
            </value>
            <value>
                <fullName>Willian Rocha</fullName>
            </value>
            <value>
                <fullName>Diego Vieira</fullName>
            </value>
            <value>
                <fullName>Bruno Santana</fullName>
            </value>
            <value>
                <fullName>Alcides (Cidinho)</fullName>
            </value>
            <value>
                <fullName>Canais De Serviços</fullName>
            </value>
            <value>
                <fullName>Avanço</fullName>
            </value>
            <value>
                <fullName>BlueDiv</fullName>
            </value>
            <value>
                <fullName>Gz Sistemas</fullName>
            </value>
            <value>
                <fullName>Zanthus</fullName>
            </value>
            <value>
                <fullName>Led Informatica</fullName>
            </value>
            <value>
                <fullName>VS Solutions</fullName>
            </value>
            <value>
                <fullName>ValidCode</fullName>
            </value>
            <value>
                <fullName>Auticomp</fullName>
            </value>
            <value>
                <fullName>RCD11 (Rogerio)</fullName>
            </value>
            <value>
                <fullName>Gil</fullName>
            </value>
            <value>
                <fullName>Bauer</fullName>
            </value>
            <value>
                <fullName>PDVTEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>