force-app/main/default/objects/Account/fields/Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Focus_Area__c</fullName>
    <description>Foco principal da conta: indica a linha de produto/parceria de interesse.</description>
    <label>Foco Principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parceria</fullName>
            </value>
            <value>
                <fullName>Acelerato</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Cosmos</fullName>
            </value>
            <value>
                <fullName>Ambos</fullName>
                <isActive>false</isActive>
                <label>Ambos</label>
            </value>
            <value>
                <fullName>RP</fullName>
                <isActive>false</isActive>
                <label>RP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>