force-app/main/default/objects/Account/fields/FrenteCaixa__c.field-meta.xml
<CustomField>
    <fullName>FrenteCaixa__c</fullName>
    <label>Frente de Caixa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angulo Sistemas</fullName>
            </value>
            <value>
                <fullName>Arius</fullName>
            </value>
            <value>
                <fullName>Avanço</fullName>
            </value>
            <value>
                <fullName>Bling</fullName>
            </value>
            <value>
                <fullName>Casa Magalhães</fullName>
            </value>
            <value>
                <fullName>CeltaWare</fullName>
            </value>
            <value>
                <fullName>Ciss</fullName>
            </value>
            <value>
                <fullName>Citel</fullName>
            </value>
            <value>
                <fullName>CPlus</fullName>
            </value>
            <value>
                <fullName>Data Soft</fullName>
            </value>
            <value>
                <fullName>EASiCash</fullName>
            </value>
            <value>
                <fullName>Emporium</fullName>
            </value>
            <value>
                <fullName>Futura</fullName>
            </value>
            <value>
                <fullName>Gix Pyxis (SHX)</fullName>
            </value>
            <value>
                <fullName>GZ Sistemas</fullName>
            </value>
            <value>
                <fullName>HappyBiz</fullName>
            </value>
            <value>
                <fullName>Hipcom</fullName>
            </value>
            <value>
                <fullName>HR Tech</fullName>
            </value>
            <value>
                <fullName>Imperium</fullName>
            </value>
            <value>
                <fullName>Intersolid</fullName>
            </value>
            <value>
                <fullName>KW</fullName>
            </value>
            <value>
                <fullName>LBC Sistemas</fullName>
            </value>
            <value>
                <fullName>Linear Sistemas</fullName>
            </value>
            <value>
                <fullName>Linx</fullName>
            </value>
            <value>
                <fullName>Logus</fullName>
            </value>
            <value>
                <fullName>Lumi Software</fullName>
            </value>
            <value>
                <fullName>MaxiPós</fullName>
            </value>
            <value>
                <fullName>Mercatus</fullName>
            </value>
            <value>
                <fullName>Mobne (Consinco)</fullName>
            </value>
            <value>
                <fullName>Não utiliza PDV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>