force-app/main/default/objects/Account/fields/Id_PipeDrive__c.field-meta.xml
<CustomField>
    <fullName>Id_PipeDrive__c</fullName>
    <description>ID de origem do registro no PipeDrive. Usado como chave estrangeira nas cargas de dados de migracao.</description>
    <externalId>true</externalId>
    <label>ID PipeDrive</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>