force-app/main/default/objects/Account/fields/ModuloInteresse__c.field-meta.xml
<CustomField>
    <fullName>ModuloInteresse__c</fullName>
    <description>Módulo de interesse do Acelerato</description>
    <label>Módulo de Interesse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atendimento</fullName>
            </value>
            <value>
                <fullName>Projetos</fullName>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>