force-app/main/default/objects/Account/fields/NumeroLojas__c.field-meta.xml
<CustomField>
    <fullName>NumeroLojas__c</fullName>
    <description>Quantidade de lojas da rede</description>
    <label>Número de Lojas</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>