force-app/main/default/objects/Account/fields/PDVs__c.field-meta.xml
<CustomField>
    <fullName>PDVs__c</fullName>
    <description>Quantidade de PDVs da rede</description>
    <label>PDV&apos;s</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>