force-app/main/default/objects/Account/fields/QualificadoBluesoft__c.field-meta.xml
<CustomField>
    <fullName>QualificadoBluesoft__c</fullName>
    <label>Qualificado Bluesoft</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aderência Futura</fullName>
            </value>
            <value>
                <fullName>Dúvida</fullName>
            </value>
            <value>
                <fullName>Inoperante</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>