force-app/main/default/objects/Account/fields/RamoAtividade__c.field-meta.xml
<CustomField>
    <fullName>RamoAtividade__c</fullName>
    <description>Ramo de atividade da empresa</description>
    <label>Ramo de Atividade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimentar - Açougues, Casa de Carnes</fullName>
            </value>
            <value>
                <fullName>Alimentar - Açougues Casa de Carnes</fullName>
            </value>
            <value>
                <fullName>Alimentar - Atacado</fullName>
            </value>
            <value>
                <fullName>Alimentar - Atacarejo</fullName>
            </value>
            <value>
                <fullName>Alimentar - Bebidas</fullName>
            </value>
            <value>
                <fullName>Alimentar - Conveniência</fullName>
            </value>
            <value>
                <fullName>Alimentar - Doces</fullName>
            </value>
            <value>
                <fullName>Alimentar - Empório</fullName>
            </value>
            <value>
                <fullName>Alimentar - Hipermercado</fullName>
            </value>
            <value>
                <fullName>Alimentar - Hortifruti</fullName>
            </value>
            <value>
                <fullName>Alimentar - Mercado</fullName>
            </value>
            <value>
                <fullName>Alimentar - Mercado Autônomo</fullName>
            </value>
            <value>
                <fullName>Alimentar - Mercearia</fullName>
            </value>
            <value>
                <fullName>Alimentar - Outros</fullName>
            </value>
            <value>
                <fullName>Alimentar - Padarias &amp; Docerias</fullName>
            </value>
            <value>
                <fullName>Alimentar - Saudável &amp; Suplementos</fullName>
            </value>
            <value>
                <fullName>Alimentar - Superatacado</fullName>
            </value>
            <value>
                <fullName>Alimentar - Supermercado</fullName>
            </value>
            <value>
                <fullName>Automotivos</fullName>
            </value>
            <value>
                <fullName>Bazar | Utilidades | Brinquedos | Papelarias | Artigos | Presentes</fullName>
            </value>
            <value>
                <fullName>Bebê</fullName>
            </value>
            <value>
                <fullName>Cama, Mesa e Banho</fullName>
            </value>
            <value>
                <fullName>Cama Mesa e Banho</fullName>
            </value>
            <value>
                <fullName>Construtora | Incorporadora</fullName>
            </value>
            <value>
                <fullName>Consultoria</fullName>
            </value>
            <value>
                <fullName>Cooperativa</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Drogaria | Farmácia | Medicamentos</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Eletrodomésticos | Eletromóveis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>