force-app/main/default/objects/Account/fields/RazaoSocial__c.field-meta.xml
<CustomField>
    <fullName>RazaoSocial__c</fullName>
    <description>Razão social da empresa</description>
    <label>Razão Social</label>
    <type>TextArea</type>
</CustomField>